<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".T3MainActivity">

    <item
        android:id="@+id/T3_menu_home"
        android:title="@string/home"
        app:showAsAction="always"
        android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/T3_menu_settings"
        android:title="@string/settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings"
        />
     <item
        android:id="@+id/T3_menu_review"
        android:title="@string/review"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/T3_menu_notification"
        android:title="@string/notification_txt"
        app:showAsAction="always"
        android:icon="@drawable/ic_notification"
        />
    <item
        android:id="@+id/T3_menu_help"
        android:title="@string/help"
        app:showAsAction="never" />

</menu>