<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C5E1A"
    tools:context=".SettingsFragment">


    <RadioGroup
        android:id="@+id/t3RG"
        android:layout_width="366dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="276dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/t3RB1"
            style="@style/radiobutton_text_style"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_button1" />

        <RadioButton
            android:id="@+id/t3RB2"
            style="@style/radiobutton_text_style"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_button2" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="304dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="236dp"
        android:text="@string/home_screen_background"
        android:textColor="	#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/t3RG1"
        android:layout_width="330dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="388dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton3"
            style="@style/radiobutton_text_style"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_value1" />

        <RadioButton
            android:id="@+id/radioButton6"
            style="@style/radiobutton_text_style"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_value2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="294dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="344dp"
        android:text="@string/temperature_unit"
        android:textColor="	#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch2"
        style="@style/radiobutton_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="556dp"
        android:minHeight="48dp"
        android:text="@string/lock_screen_to_portrait"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="460dp"
        android:text="@string/home_screen_clock_format"
        android:textColor="	#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/t3RG2"
        android:layout_width="332dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="496dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton7"
            style="@style/radiobutton_text_style"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:text="@string/_24hrs" />

        <RadioButton
            android:id="@+id/radioButton8"
            style="@style/radiobutton_text_style"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:text="@string/_12hrs" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="198dp"
        android:layout_height="185dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/settings_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="237dp"
        android:layout_marginTop="89dp"
        android:text="@string/configure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>