<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="172dp"
        android:layout_height="170dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_image" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="338dp"
        android:layout_height="54dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="81dp"
        android:backgroundTint="@color/black"
        android:hint="@string/login_username_hint"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="74dp"
        android:autofillHints="password"
        android:backgroundTint="@color/black"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="406dp"
        android:layout_height="61dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="420dp"
        android:text="@string/loginBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/text_field_style3"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="372dp"
        android:text="@string/chkbox_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginTop="528dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="@color/white"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="33dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="220dp"
        android:text="@string/no_account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="206dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="588dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/google_image1" />

</androidx.constraintlayout.widget.ConstraintLayout>