<?xml version="1.0" encoding="utf-8"?>
<!--    Jagminder Sembi          -->
<!--    Safwan Shaib    n01343815    0NA-->
<!--    Nkeiru Johnson-Achilike  n01411707 0NA-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background_fragment4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".T3MainActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="252dp"
        android:layout_height="256dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/r_f_i_d_foreground" />

    <Button
        android:id="@+id/activity_log"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/activity_log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <ImageButton
        android:id="@+id/T3_open_door_button"
        android:layout_width="72dp"
        android:layout_height="57dp"
        android:background="@drawable/open_door_closed_bckgnd"
        android:contentDescription="@string/open_door_tv"
        android:src="@mipmap/ic_door_closed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/open_door_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/open_door_tv"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/activity_log_tv"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:layout_marginTop="268dp"
        android:layout_marginBottom="217dp"
        android:fontFamily="@font/maiden_orange"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="548dp"
        android:text="Unauthorised Activity Detected?"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="178dp"
        android:layout_height="64dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="524dp"
        android:text="Send Notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="149dp"
        android:layout_height="25dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="590dp"
        android:text="@string/real_time_rfid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/real_time_rfid_tv"
        android:layout_width="149dp"
        android:layout_height="47dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

</androidx.constraintlayout.widget.ConstraintLayout>